# scrabble-explorer

./: .gitignore  README.md  SPEC.md  main.py  pyproject.toml
.claude/: settings.local.json
assets/: SPEC.md
frontend/: index.html  package-lock.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChartsSidebar.tsx  FilterBar.tsx  FilterChip.tsx  FilterSuggestions.tsx  LengthDistribution.tsx  LetterFrequency.tsx  RackInput.tsx  RackResults.tsx  ResultsList.tsx  ScoreDistribution.tsx  SearchBar.tsx  WordCard.tsx  WordFamilyTree.tsx
frontend/src/hooks/: useRack.ts  useSearch.ts
frontend/src/types/: index.ts
src/explorer_api/: main.py  models.py
src/explorer_api/routes/: families.py  info.py  rack.py  search.py
tests/: test_routes.py
