[project]
name = "scrabble-explorer"
version = "0.1.0"
description = "Scrabble word exploration API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scrabble-engine",
    "fastapi",
    "uvicorn[standard]",
]

[tool.uv.sources]
scrabble-engine = { path = "../scrabble-engine" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/explorer_api"]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]
